kube-cluster-version-1.10.4/calico/np/allow-nginx-web-dev-redis-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-netpol
spec:
  podSelector:
    matchLabels:
      app: nginx-web
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: dev-redis
    ports:
    - port: 6379
