kube-cluster-version-1.10.4/calico/np/allow-nginx-web-dev-redis-ip.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-frontend-allow
spec:
  podSelector:
    matchLabels:
      app: dev-redis
  ingress:
    - from:
      - ipBlock:
          cidr: 10.1.121.0/24
